fix align

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11702,7 +11702,8 @@ section.how .row > div {
           background-color: white;
           font-size: 1.6em;
           color: #fe5b5f;
-          padding: 31px;
+          padding: 31px 0px;
+          text-align: center;
           position: absolute;
           right: 0;
           top: -15px;
